static/style.css
.fixed {
  position: fixed;
  background: #f83d23;
  width: 100%;
  height: 22%;
  display: flex;
  justify-content: center;
  align-items: center;
  box-shadow: 0 0 6px #000;
  color: #fff;
}

.footer {
    position:fixed;bottom:0px;width:100%;
    text-align:center;
}

.cardsContainer {
    margin-top: 128px;
}

.card {
  display:inline-block;
  float:left;
  width:300px;
  height:175px;
  margin:15px;
  padding-top:5%;
  text-align:center;
  border: 1px solid grey;
  background-color: #c2d6d6;
  color:black;
  font-family:'Helvetica';
  cursor:pointer;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

.card:hover {
  background-color:#99ff99;
  color:black;
  transition: 0.5s ease all;
  -webkit-transition: 0.5s ease all;
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.material-icons:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
    transform: scale(1.2);
    -webkit-transition: 0.5s ease all;
    cursor:pointer;
}

.material-icons:active {
  background-color: #3e8e41;
  box-shadow: 0 5px #666;
  transform: translateY(16px);
}

